--- a/cuentacliente/pom.xml
+++ b/cuentacliente/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>jakarta.faces</artifactId>
             <version>2.3.17</version>
         </dependency>
+		<dependency>
+    <groupId>org.springframework.kafka</groupId>
+    <artifactId>spring-kafka</artifactId>
+</dependency>
+
 	</dependencies>
 
 	<build>
