--- a/cuentacliente/src/main/resources/application.properties
+++ b/cuentacliente/src/main/resources/application.properties
@@ -13,4 +13,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=transaccionId
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Topic KAFKA
+app.kafka.topic=test-topic
+
+
+
 
