--- a/cuentacliente/pom.xml
+++ b/cuentacliente/pom.xml
@@ -29,7 +29,21 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<org.springdoc.version>2.8.9</org.springdoc.version> 
 	</properties>
+
+	 <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.joinfaces</groupId>
+                <artifactId>joinfaces-platform</artifactId>
+                <version>5.5.5</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -60,17 +74,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
-		 <!-- JSF (Mojarra) -->
-        <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>jakarta.faces</artifactId>
-            <version>2.3.17</version>
-        </dependency>
+		  <!-- JSF + PrimeFaces -->
+    <dependency>
+        <groupId>org.joinfaces</groupId>
+        <artifactId>faces-spring-boot-starter</artifactId>
+    </dependency>
+	<!-- Mensajeria Kafka -->
 		<dependency>
     <groupId>org.springframework.kafka</groupId>
     <artifactId>spring-kafka</artifactId>
 </dependency>
-
+	<dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${org.springdoc.version}</version>
+        </dependency>
 	</dependencies>
 
 	<build>
