--- a/cuentacliente/src/main/resources/application.properties
+++ b/cuentacliente/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=cuentacliente
 #Puerto de aplicación
 server.port=8080
 
+#BASE DE DATOS
 #Configuraciones para conexión hacía la DB
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/pruebabackend
@@ -14,6 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #Configurando estructura de log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
+#KAFKA
 #Configurando consumo y producer de kafka y su conexión con el servidor
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=transaccionId
@@ -35,6 +37,7 @@ app.url.base=http://localhost:8080/transaccion
 #server.servlet.register-default-servlet=true
 
 
+#SWAGGER
 # Definiendo URL base para acceder a swagger
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
